<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewShortName"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/teal_200"
        android:gravity="start"
        android:paddingLeft="@dimen/common_15_dp"
        android:paddingTop="@dimen/common_15_dp"
        android:text="@string/sort"
        android:textColor="@color/white"
        android:textSize="@dimen/common_20_sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="-25dp"
        android:layout_marginRight="5dp"
        android:elevation="@dimen/common_20_sp"
        app:cardBackgroundColor="@color/light_grey"
        app:cardCornerRadius="@dimen/common_10_dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewShortName"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
          >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/common_15_dp"
            android:orientation="horizontal"
            android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="start"
                android:text="@string/volume_high_to_low"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="start"
                android:text="@string/volume_low_to_high"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="start"
                android:text="@string/last_tread_price_high_to_low"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="start"
                android:text="@string/last_tread_price_low_to_high"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="start"
                android:text="@string/pclose_high_to_low"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="start"
                android:text="@string/pclose_low_to_high"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>


        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
           >

            <RadioButton
                android:id="@+id/rbVolumeHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:buttonTint="@color/white"
                android:textSize="0sp" />

            <RadioButton
                android:id="@+id/rbVolumeLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="101"
                android:buttonTint="@color/white"
                android:textSize="0sp"/>

            <RadioButton
                android:id="@+id/rbLastTradeHigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="200"
                android:buttonTint="@color/white"
                android:textSize="0sp"/>

            <RadioButton
                android:id="@+id/rbLastTradeLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="201"
                android:buttonTint="@color/white"
                android:textSize="0sp"/>

            <RadioButton
                android:id="@+id/rbPCloseHigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="300"
                android:buttonTint="@color/white"
                android:textSize="0sp" />
            <RadioButton
                android:id="@+id/rbPCloseLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="301"
                android:buttonTint="@color/white"
                android:textSize="0sp" />
            </RadioGroup>

    </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnApply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/cv"
                android:text="Apply"
                android:textSize="@dimen/common_15_dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/colorPrimaryDark"
                tools:ignore="MissingConstraints" />
</LinearLayout>
</androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>